--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ main {
     overflow: hidden;
     transition: transform 0.3s ease-out, width 0.3s ease-out, height 0.3s ease-out;
     transform-style: preserve-3d;
-    color: #ffffff; /* Setze die Textfarbe auf Weiß */
+    color: #ffffff;
 }
 
 .card:hover {
@@ -67,13 +67,13 @@ main {
 }
 
 .card h2 {
-    color: #ffffff; /* Weiße Überschrift */
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5); /* Optional: Fügt einen leichten Schatten hinzu für bessere Lesbarkeit */
+    color: #ffffff;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     margin-bottom: 1rem;
 }
 
 .card p {
-    color: #f0f0f0; /* Leicht gedämpftes Weiß für den Paragraphentext */
+    color: #f0f0f0;
     margin-bottom: 0.5rem;
 }
 
@@ -81,7 +81,7 @@ main {
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-    color: #ffffff; /* Weiße Farbe für den versteckten Text */
+    color: #ffffff;
     margin-top: 1rem;
 }
 
@@ -90,7 +90,6 @@ main {
     transform: translateY(0);
 }
 
-/* Fügen Sie diese Stile für die Animation hinzu */
 @keyframes typewriter {
     from { width: 0; }
     to { width: 100%; }
@@ -98,17 +97,17 @@ main {
 
 @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: #ffffff; } /* Ändere die Farbe des blinkenden Cursors auf Weiß */
+    50% { border-color: #ffffff; }
 }
 
 .typewriter {
     overflow: hidden;
-    border-right: .15em solid #ffffff; /* Ändere die Farbe des blinkenden Cursors auf Weiß */
+    border-right: .15em solid #ffffff;
     white-space: nowrap;
     margin: 0 auto;
     letter-spacing: .15em;
     width: 0;
-    color: #ffffff; /* Setze die Textfarbe auf Weiß */
+    color: #ffffff;
 }
 
 .typewriter:nth-child(1) {
